add user support

--- a/smb_config/smb.conf
+++ b/smb_config/smb.conf
@@ -1,5 +1,5 @@
 [global]
-   workgroup = WORKGROUP
+   workgroup = %%WORKGROUP%%
    server string = Samba HomeAssistant config share
 
    load printers = no
@@ -9,6 +9,3 @@
    browseable = yes
    writeable = yes
    path = /config
-
-   public = yes
-   guest ok = yes
