update addon version 0.3

--- a/smb_config/smb.conf
+++ b/smb_config/smb.conf
@@ -1,6 +1,7 @@
 [global]
    workgroup = %%WORKGROUP%%
    server string = Samba HomeAssistant config share
+   security: share
 
    load printers = no
    disable spoolss = yes
