--- a/letsencrypt/config.json
+++ b/letsencrypt/config.json
@@ -8,14 +8,13 @@
   "ports": {
     "80/tcp": 80
    },
-  "map_config": false,
   "map_ssl": true,
   "options": {
     "email": "",
-    "domain": ""
+    "domain": [""]
   },
   "schema": {
     "email": "str",
-    "domain": "str"
+    "domain": ["str"]
   }
 }
