--- a/letsencrypt/config.json
+++ b/letsencrypt/config.json
@@ -8,7 +8,7 @@
   "ports": {
     "80/tcp": 80
    },
-  "map_ssl": true,
+  "map": ["ssl"],
   "options": {
     "email": null,
     "domains": [null],
