--- a/smb_config/smb.conf
+++ b/smb_config/smb.conf
@@ -1,10 +1,12 @@
 [global]
    workgroup = %%WORKGROUP%%
    server string = Samba HomeAssistant config share
-   security: share
+   security: user
 
    load printers = no
    disable spoolss = yes
+
+   log level = 1
 
    #guest account = root
    #map to guest = Bad User
