--- a/letsencrypt/config.json
+++ b/letsencrypt/config.json
@@ -3,6 +3,7 @@
   "version": "0.3",
   "slug": "letsencrypt",
   "description": "Manage let's encrypt certificate",
+  "url": "https://home-assistant.io/addons/lets_encrypt/",
   "startup": "once",
   "boot": "manual",
   "ports": {
