--- a/check_config/config.json
+++ b/check_config/config.json
@@ -6,6 +6,7 @@
   "url": "https://home-assistant.io/addons/check_config/",
   "startup": "once",
   "boot": "manual",
+  "map": ["config", "ssl"],
   "options": {
     "version": "latest"
   },
