Modifiy for new handling

--- a/ssh/Dockerfile
+++ b/ssh/Dockerfile
@@ -1,7 +1,6 @@
 FROM %%BASE_IMAGE%%
 
-# Add version
-ENV VERSION %%VERSION%%
+# Add env
 ENV LANG C.UTF-8
 
 # Setup base
@@ -9,6 +8,7 @@ RUN apk add --no-cache jq openssh vim
 
 # Copy data
 COPY run.sh /
+COPY motd /etc/
 
 RUN chmod a+x /run.sh
 
