--- a/letsencrypt/Dockerfile
+++ b/letsencrypt/Dockerfile
@@ -1,11 +1,10 @@
 FROM %%BASE_IMAGE%%
 
-# Add version
-ENV VERSION %%VERSION%%
+# Add env
 ENV LANG C.UTF-8
 
 # Setup base
-RUN apk add --no-cache jq certbot 
+RUN apk add --no-cache jq certbot
 
 # Copy data
 COPY run.sh /
