fix requre value

--- a/nginx_proxy/config.json
+++ b/nginx_proxy/config.json
@@ -12,7 +12,7 @@
    },
   "map": ["ssl"],
   "options": {
-    "domain": "domain",
+    "domain": null,
     "certfile": "fullchain.pem",
     "keyfile": "privkey.pem"
   },
