--- a/nginx_proxy/nginx.conf
+++ b/nginx_proxy/nginx.conf
@@ -1,6 +1,10 @@
 daemon off;
 error_log stderr;
 
+events {
+	worker_connections 1024;
+}
+
 http {
     map $http_upgrade $connection_upgrade {
         default upgrade;
