Add tzdata and fix timezone

--- a/ssh/Dockerfile
+++ b/ssh/Dockerfile
@@ -4,7 +4,7 @@ FROM %%BASE_IMAGE%%
 ENV LANG C.UTF-8
 
 # Setup base
-RUN apk add --no-cache jq openssh vim
+RUN apk add --no-cache tzdata jq openssh vim
 
 # Copy data
 COPY run.sh /
