--- a/dnsmasq/config.json
+++ b/dnsmasq/config.json
@@ -6,15 +6,15 @@
   "url": "https://home-assistant.io/addons/dnsmasq/",
   "startup": "before",
   "boot": "auto",
-  "ports": {
-    "53/udp": 53
-  },
+  "host_network": true,
   "options": {
+    "interface": "eth0",
     "defaults": ["8.8.8.8", "8.8.4.4"],
     "forwards": [],
     "hosts": []
   },
   "schema": {
+    "interface": "str",
     "defaults": ["str"],
     "forwards": [
       {
