--- a/bluetooth_bcm43xx/config.json
+++ b/bluetooth_bcm43xx/config.json
@@ -1,7 +1,7 @@
 {
   "name": "Bluetooth BCM43xx",
   "version": "0.2",
-  "slug": "Bluetooth_bcm43xx",
+  "slug": "bluetooth_bcm43xx",
   "description": "Activate bluetooth for bcm43xx",
   "url": "https://home-assistant.io/addons/Bluetooth_bcm43xx/",
   "startup": "initialize",
