--- a/bluetooth_bcm43xx/config.json
+++ b/bluetooth_bcm43xx/config.json
@@ -7,6 +7,7 @@
   "startup": "initialize",
   "boot": "auto",
   "host_network": "true",
+  "privileged": "NET_ADMIN",
   "devices": ["/dev/ttyAMA0:/dev/ttyAMA0:rwm"],
   "options": {},
   "schema": {},
