--- a/bluetooth_bcm43xx/Dockerfile
+++ b/bluetooth_bcm43xx/Dockerfile
@@ -11,6 +11,9 @@ RUN git clone --depth 1 https://github.com/RPi-Distro/firmware-nonfree /tmp/firm
     && mkdir -p /lib/firmware/brcm \
     && cp -f /tmp/firmware/brcm80211/brcm/* /lib/firmware/brcm/ \
     && rm -rf /tmp/firmware
+    
+# Copy firmware
+COPY BCM43430A1.hcd /lib/firmware/brcm/
 
 # Copy data
 COPY run.sh /
