--- a/bluetooth_bcm43xx/Dockerfile
+++ b/bluetooth_bcm43xx/Dockerfile
@@ -4,16 +4,10 @@ FROM %%BASE_IMAGE%%
 ENV LANG C.UTF-8
 
 # Setup base
-RUN apk add --no-cache tzdata jq bluez git
+RUN apk add --no-cache tzdata jq bluez
 
-# Install firmware
-RUN git clone --depth 1 https://github.com/RPi-Distro/firmware-nonfree /tmp/firmware \
-    && mkdir -p /lib/firmware/brcm \
-    && cp -f /tmp/firmware/brcm80211/brcm/* /lib/firmware/brcm/ \
-    && rm -rf /tmp/firmware
-    
 # Copy firmware
-COPY BCM43430A1.hcd /lib/firmware/brcm/
+COPY firmware/* /lib/firmware/brcm/
 
 # Copy data
 COPY run.sh /
