--- a/dnsmasq/Dockerfile
+++ b/dnsmasq/Dockerfile
@@ -4,7 +4,7 @@ FROM %%BASE_IMAGE%%
 ENV LANG C.UTF-8
 
 # Setup base
-RUN apk add --no-cache tzdata jq dnsmasq
+RUN apk add --no-cache jq dnsmasq
 
 # Copy data
 COPY run.sh /
