Update addons with multibe tasks (#129)
Update addons with multibe tasks

--- a/dnsmasq/config.json
+++ b/dnsmasq/config.json
@@ -1,6 +1,6 @@
 {
-  "name": "Dnsmasq server",
-  "version": "0.4",
+  "name": "Dnsmasq",
+  "version": "0.5",
   "slug": "dnsmasq",
   "description": "A simple dns server with benefits",
   "url": "https://home-assistant.io/addons/dnsmasq/",
