--- a/snips/config.json
+++ b/snips/config.json
@@ -12,19 +12,23 @@
   },
   "devices": ["/dev/snd:/dev/snd:rwm"],
   "options": {
-    "mqtt_bridge": true,
-    "mqtt_host": "172.17.0.1",
-    "mqtt_port": 1884,
-    "mqtt_user": "",
-    "mqtt_password": "",
+    "mqtt_bridge": {
+      "active": true,
+      "host": "172.17.0.1",
+      "port": 1884,
+      "user": "",
+      "password": "",
+    }
     "assistant": "assistant.zip"
   },
   "schema": {
-    "mqtt_bridge": "bool",
-    "mqtt_host": "str",
-    "mqtt_port": "port",
-    "mqtt_user": "str",
-    "mqtt_password": "str",
+    "mqtt_bridge": {
+      "active": "bool",
+      "host": "str",
+      "port": "port",
+      "user": "str",
+      "password": "str",
+    }
     "assistant": "str"
   },
   "image": "homeassistant/{arch}-addon-snips",
