--- a/snips/mosquitto.conf
+++ b/snips/mosquitto.conf
@@ -1,6 +1,6 @@
 ##
 # defaults
-protocol mqtt
+listener 1883
 user root
 
 ##
@@ -11,4 +11,3 @@ log_dest stdout
 # datastore
 persistence true
 persistence_location /data/
-
