--- a/snips/config.json
+++ b/snips/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Snips.AI",
-  "version": "0.4.3",
+  "version": "0.4.3-p1",
   "slug": "snips",
   "description": "The first on-device voice platform",
   "url": "https://home-assistant.io/addons/snips/",
