--- a/google_assistant/Dockerfile
+++ b/google_assistant/Dockerfile
@@ -3,8 +3,8 @@
 
 # Install packages
 RUN apt-get update \
-    && apt-get install -y python3 python3-dev python3-pip \
-        python3-six python3-pyasn1 libportaudio2 \
+    && apt-get install -y jq tzdata python3 python3-dev python3-pip \
+        python3-six python3-pyasn1 libportaudio2 alsa-utils \
     && pip3 install google-assistant-library google-auth \
     && apt-get remove -y --purge python3-pip python3-dev \
     && apt autoremove -y \
