--- a/mosquitto/mosquitto.conf
+++ b/mosquitto/mosquitto.conf
@@ -10,9 +10,10 @@ log_dest stdout
 ##
 # datastore
 persistence true
-persistence_location /data/
+persistence_location /data
 
 ##
 # User settings
 #password_file /data/users.db
 #allow_anonymous false
+#include_dir /share/mosquitto
