--- a/mosquitto/config.json
+++ b/mosquitto/config.json
@@ -1,10 +1,10 @@
 {
   "name": "Mosquitto broker",
-  "version": "0.8",
+  "version": "1.0",
   "slug": "mosquitto",
   "description": "An Open Source MQTT broker",
   "url": "https://home-assistant.io/addons/mosquitto/",
-  "startup": "before",
+  "startup": "system",
   "boot": "auto",
   "ports": {
     "1883/tcp": 1883,
@@ -16,6 +16,10 @@
     "ssl": false,
     "anonymous": true,
     "logins": [],
+    "customize": {
+      "active": false,
+      "folder": "moquitto"
+    },
     "certfile": "fullchain.pem",
     "keyfile": "privkey.pem"
   },
@@ -26,6 +30,10 @@
     "logins": [
         {"username": "str", "password": "str"}
     ],
+    "customize": {
+      "active": "bool",
+      "folder": "str"
+    },
     "certfile": "str",
     "keyfile": "str"
   },
