--- a/google_assistant/Dockerfile
+++ b/google_assistant/Dockerfile
@@ -5,14 +5,14 @@
 RUN apt-get update \
     && apt-get install -y jq tzdata python3 python3-dev python3-pip \
         python3-six python3-pyasn1 libportaudio2 alsa-utils \
-    && pip3 install google-assistant-library google-auth \
+    && pip3 install google-assistant-library google-auth requests_oauthlib cherrypy \
     && apt-get remove -y --purge python3-pip python3-dev \
     && apt autoremove -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy data
 COPY run.sh /
-COPY hassio_gassistant.py /
+COPY *.py /
 COPY asoundrc /root/.asoundrc
 
 RUN chmod a+x /run.sh
