--- a/google_assistant/config.json
+++ b/google_assistant/config.json
@@ -16,12 +16,12 @@
   "options": {
     "mic": "0,0",
     "speaker": "1,0",
-    "oauth_client": "google_assistant.json"
+    "client_secrets": "google_assistant.json"
   },
   "schema": {
     "mic": "str",
     "speaker": "str",
-    "oauth_client": "str"
+    "client_secrets": "str"
   },
   "image": "homeassistant/{arch}-addon-google_assistant"
 }
