--- a/google_assistant/config.json
+++ b/google_assistant/config.json
@@ -7,7 +7,7 @@
   "startup": "application",
   "boot": "auto",
   "arch": ["armhf", "amd64"],
-  "map": ["share"],
+  "map": ["share:rw"],
   "devices": ["/dev/snd:/dev/snd:rwm"],
   "ports": {
     "9324/tcp": 9324
