--- a/google_assistant/config.json
+++ b/google_assistant/config.json
@@ -1,13 +1,13 @@
 {
   "name": "Google Assistant",
-  "version": "0.0.3-p2",
+  "version": "0.0.3-p3",
   "slug": "google_assistant",
   "description": "A virtual personal assistant developed by Google",
   "url": "https://home-assistant.io/addons/google_assistant/",
   "startup": "application",
   "boot": "auto",
   "arch": ["armhf", "amd64"],
-  "map": ["share:rw"],
+  "map": ["share"],
   "devices": ["/dev/snd:/dev/snd:rwm"],
   "ports": {
     "9324/tcp": 9324
