--- a/ssh/config.json
+++ b/ssh/config.json
@@ -4,7 +4,7 @@
   "slug": "ssh",
   "description": "Connect to your server over SSH",
   "url": "https://home-assistant.io/addons/ssh/",
-  "startup": "before",
+  "startup": "services",
   "boot": "auto",
   "ports": {
     "22/tcp": 22
