remove tzdata while it is on base image

--- a/check_config/Dockerfile
+++ b/check_config/Dockerfile
@@ -4,7 +4,7 @@ FROM %%BASE_IMAGE%%
 ENV LANG C.UTF-8
 
 # Setup base
-RUN apk add --no-cache tzdata jq python3 \
+RUN apk add --no-cache jq python3 \
     && pip3 install --no-cache --upgrade pip
 
 # Copy data
