--- a/ssh/Dockerfile
+++ b/ssh/Dockerfile
@@ -4,7 +4,8 @@ FROM %%BASE_IMAGE%%
 ENV LANG C.UTF-8
 
 # Setup base
-RUN apk add --no-cache jq openssh vim curl nano git mosquitto-clients
+RUN apk add --no-cache \
+    jq openssh vim curl nano git mosquitto-clients bluez
 
 # Copy data
 COPY run.sh /
