--- a/check_config/config.json
+++ b/check_config/config.json
@@ -1,8 +1,8 @@
 {
-  "name": "Check HomeAssistant config",
+  "name": "Check Home Assistant configuration",
   "version": "0.7",
   "slug": "check_config",
-  "description": "Check HomeAssistant config with a new version",
+  "description": "Check current Home Assistant configuration against a new version",
   "url": "https://home-assistant.io/addons/check_config/",
   "startup": "once",
   "boot": "manual",
