--- a/bluetooth_bcm43xx/config.json
+++ b/bluetooth_bcm43xx/config.json
@@ -2,7 +2,7 @@
   "name": "Bluetooth BCM43xx",
   "version": "0.7",
   "slug": "bluetooth_bcm43xx",
-  "description": "Activate bluetooth for bcm43xx",
+  "description": "Activate Bluetooth for Broadcom 43xx chips",
   "url": "https://home-assistant.io/addons/bluetooth_bcm43xx/",
   "startup": "initialize",
   "boot": "auto",
