--- a/git_pull/config.json
+++ b/git_pull/config.json
@@ -1,8 +1,8 @@
 {
-  "name": "GIT pull",
+  "name": "Git pull",
   "version": "0.2",
   "slug": "git_pull",
-  "description": "Simple git pull to update local config.",
+  "description": "Simple git pull to update the local configuration",
   "url": "https://home-assistant.io/addons/git_pull/",
   "startup": "services",
   "boot": "manual",
