--- a/git_pull/config.json
+++ b/git_pull/config.json
@@ -1,11 +1,12 @@
 {
   "name": "Git pull",
-  "version": "0.2",
+  "version": "0.3",
   "slug": "git_pull",
   "description": "Simple git pull to update the local configuration",
   "url": "https://home-assistant.io/addons/git_pull/",
   "startup": "services",
   "boot": "manual",
+  "hassio_api": true,
   "options": {
     "repositorie": null,
     "auto_restart": false,
