--- a/ssh/config.json
+++ b/ssh/config.json
@@ -1,11 +1,12 @@
 {
   "name": "SSH server",
-  "version": "2.4",
+  "version": "2.5",
   "slug": "ssh",
   "description": "Allows connections over SSH",
   "url": "https://home-assistant.io/addons/ssh/",
   "startup": "services",
   "boot": "auto",
+  "hassio_api": true,
   "ports": {
     "22/tcp": 22
    },
