--- a/nginx_proxy/nginx.conf
+++ b/nginx_proxy/nginx.conf
@@ -40,6 +40,9 @@ http {
         proxy_buffering off;
 
         location / {
+            # auth_basic "Authorized users only";
+            # auth_basic_user_file /data/.htpasswd;
+
             proxy_pass http://172.17.0.1:8123;
             proxy_set_header Host $host;
             proxy_redirect http:// https://;
@@ -47,6 +50,14 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
+        }
+
+        location /api/notify.html5/callback {
+            if ($http_authorization = "") { return 403; }
+            allow all;
+            proxy_pass http://172.17.0.1:8123;
+            proxy_set_header Host $host;
+            proxy_redirect http:// https://;
         }
     }
 }
