--- a/nginx_proxy/config.json
+++ b/nginx_proxy/config.json
@@ -1,6 +1,6 @@
 {
   "name": "NGINX Home Assistant SSL proxy",
-  "version": "0.5",
+  "version": "0.6",
   "slug": "nginx_proxy",
   "description": "An SSL/TLS proxy",
   "url": "https://home-assistant.io/addons/nginx_proxy/",
@@ -9,17 +9,24 @@
   "ports": {
     "80/tcp": 80,
     "443/tcp": 443
-   },
+  },
   "map": ["ssl"],
   "options": {
     "domain": null,
     "certfile": "fullchain.pem",
-    "keyfile": "privkey.pem"
+    "keyfile": "privkey.pem",
+    "basic_auth_users": []
   },
   "schema": {
     "domain": "str",
     "certfile": "str",
-    "keyfile": "str"
+    "keyfile": "str",
+    "basic_auth_users": [
+      {
+        "username": "str",
+        "password": "str"
+      }
+    ]
   },
   "image": "homeassistant/{arch}-addon-nginx_proxy"
 }
