--- a/git_pull/config.json
+++ b/git_pull/config.json
@@ -7,6 +7,7 @@
   "startup": "services",
   "boot": "manual",
   "hassio_api": true,
+  "map": ["config:rw"],
   "options": {
     "repository": null,
     "auto_restart": false,
