Reject conntions not using correct hostname

--- a/nginx_proxy/nginx.conf
+++ b/nginx_proxy/nginx.conf
@@ -13,6 +13,10 @@ http {
     }
 
     server {
+        return 444;
+    }
+
+    server {
         server_name %%DOMAIN%%;
 
         # These shouldn't need to be changed
