Change to new network layer

--- a/nginx_proxy/nginx.conf
+++ b/nginx_proxy/nginx.conf
@@ -44,7 +44,7 @@ http {
         proxy_buffering off;
 
         location / {
-            proxy_pass http://172.17.0.1:8123;
+            proxy_pass http://homeassistant:8123;
             proxy_set_header Host $host;
             proxy_redirect http:// https://;
             proxy_http_version 1.1;
