Reject conntions not using correct hostname (#175)
* Reject conntions not using correct hostname

* Change to new network layer

* Pump version

--- a/nginx_proxy/nginx.conf
+++ b/nginx_proxy/nginx.conf
@@ -13,6 +13,10 @@ http {
     }
 
     server {
+        return 444;
+    }
+
+    server {
         server_name %%DOMAIN%%;
 
         # These shouldn't need to be changed
@@ -40,7 +44,7 @@ http {
         proxy_buffering off;
 
         location / {
-            proxy_pass http://172.17.0.1:8123;
+            proxy_pass http://homeassistant:8123;
             proxy_set_header Host $host;
             proxy_redirect http:// https://;
             proxy_http_version 1.1;
