Change redirection method for incorrect hostname

--- a/nginx_proxy/nginx.conf
+++ b/nginx_proxy/nginx.conf
@@ -13,6 +13,11 @@ http {
     }
 
     server {
+        server_name _;
+        listen [::]:80 default_server ipv6only=off;
+        listen [::]:443 ssl http2 default_server ipv6only=off;
+        ssl_certificate /etc/ssl/certs/ssl-cert-snakeoil.pem;
+        ssl_certificate_key /etc/ssl/private/ssl-cert-snakeoil.key;
         return 444;
     }
 
@@ -20,7 +25,7 @@ http {
         server_name %%DOMAIN%%;
 
         # These shouldn't need to be changed
-        listen [::]:80 default_server ipv6only=off;
+        listen [::]:80;
         return 301 https://$host$request_uri;
     }
 
@@ -33,7 +38,7 @@ http {
         # dhparams file
         ssl_dhparam /data/dhparams.pem;
 
-        listen [::]:443 http2 default_server ipv6only=off;
+        listen [::]:443 http2;
         add_header Strict-Transport-Security "max-age=31536000; includeSubdomains";
         ssl on;
         ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
