--- a/nginx_proxy/nginx.conf
+++ b/nginx_proxy/nginx.conf
@@ -16,8 +16,8 @@ http {
         server_name _;
         listen [::]:80 default_server ipv6only=off;
         listen [::]:443 ssl http2 default_server ipv6only=off;
-        ssl_certificate /etc/ssl/certs/ssl-cert-snakeoil.pem;
-        ssl_certificate_key /etc/ssl/private/ssl-cert-snakeoil.key;
+        ssl_certificate /data/ssl-cert-snakeoil.pem;
+        ssl_certificate_key /data/ssl-cert-snakeoil.key;
         return 444;
     }
 
