--- a/google_assistant/Dockerfile
+++ b/google_assistant/Dockerfile
@@ -1,3 +1,5 @@
+ARG BUILD_FROM
+FROM $BUILD_FROM
 #armhf:FROM multiarch/debian-debootstrap:armhf-stretch
 #amd64:FROM multiarch/debian-debootstrap:amd64-stretch
 
