--- a/snips/Dockerfile
+++ b/snips/Dockerfile
@@ -1,5 +1,5 @@
-#armhf:FROM snipsdocker/platform:arm-0.4.9
-#amd64:FROM snipsdocker/platform:x86-0.4.9
+ARG BUILD_FROM
+FROM $BUILD_FROM
 
 # Copy data
 COPY run.sh /
