New build system (#179)
* Update Dockerfile

* Update Dockerfile

* Update Dockerfile

* Update Dockerfile

* Update Dockerfile

* Update Dockerfile

* Update Dockerfile

* Update Dockerfile

* Update Dockerfile

* Create build.json

* Update Dockerfile

* Update Dockerfile

* Create build.json

* Update build.json

--- a/google_assistant/Dockerfile
+++ b/google_assistant/Dockerfile
@@ -1,5 +1,5 @@
-#armhf:FROM multiarch/debian-debootstrap:armhf-stretch
-#amd64:FROM multiarch/debian-debootstrap:amd64-stretch
+ARG BUILD_FROM
+FROM $BUILD_FROM
 
 # Install packages
 RUN apt-get update \
