--- a/duckdns/config.json
+++ b/duckdns/config.json
@@ -6,6 +6,7 @@
   "url": "https://home-assistant.io/addons/duckdns/",
   "startup": "services",
   "boot": "auto",
+  "map": ["ssl:rw"],
   "options": {
     "token": null,
     "domains": [null],
