--- a/hass-configurator/config.json
+++ b/hass-configurator/config.json
@@ -12,26 +12,26 @@
     },
     "map": ["config:rw", "ssl"],
     "options": {
-      "BASEPATH": "/config",
-      "HASS_API": "http://homeassistant:8123/api/",
-      "HASS_API_PASSWORD": "",
-      "CREDENTIALS": "admin:secret",
-      "SSL_CERTIFICATE": "",
-      "SSL_KEY": "",
-      "ALLOWED_NETWORKS": ["172.17.0.0/16", "192.168.0.0/24", "192.168.1.0/24"],
-      "BANNED_IPS": ["8.8.8.8"],
-      "IGNORE_PATTERN": ["__pycache__"]
+      "hass_api": "http://homeassistant:8123/api/",
+      "hass_api_password": "",
+      "credentials": "admin:secret",
+      "certfile": "fullchain.pem",
+      "keyfile": "privkey.pem",
+      "ssl": false,
+      "allowed_networks": ["192.168.0.0/16"],
+      "banned_ips": ["8.8.8.8"],
+      "ignore_pattern": ["__pycache__"]
     },
     "schema": {
-      "BASEPATH": "str",
-      "HASS_API": "url",
-      "HASS_API_PASSWORD": "str",
-      "CREDENTIALS": "str",
-      "SSL_CERTIFICATE": "str",
-      "SSL_KEY": "str",
-      "ALLOWED_NETWORKS": ["str"],
-      "BANNED_IPS": ["str"],
-      "IGNORE_PATTERN": ["str"]
+      "hass_api": "url",
+      "hass_api_password": "str",
+      "credentials": "match(.*:.*)",
+      "certfile": "str",
+      "keyfile": "str",
+      "ssl": "bool",
+      "allowed_networks": ["str"],
+      "banned_ips": ["str"],
+      "ignore_pattern": ["str"]
     }
   }
   
