--- a/hass-configurator/config.json
+++ b/hass-configurator/config.json
@@ -1,8 +1,8 @@
 {
     "name": "Configurator",
-    "version": "0.1.2",
+    "version": "0.2.0",
     "slug": "configurator",
-    "description": "Home-Assistant Configurator - Browser-based configuration file editor for Home Assistant.",
+    "description": "Browser-based configuration file editor for Home Assistant.",
     "url": "https://home-assistant.io/addons/configurator",
     "startup": "application",
     "webui": "http://[HOST]:[PORT:3218]",
