--- a/duckdns/config.json
+++ b/duckdns/config.json
@@ -8,12 +8,21 @@
   "boot": "auto",
   "map": ["ssl:rw"],
   "options": {
-    "accept_lets_encrypt_terms": false,
+    "lets_encrypt": {
+      "accept_terms": false,
+      "certfile": "fullchain.pem",
+      "keyfile": "privkey.pem"
+    },
     "token": null,
     "domains": [null],
     "seconds": 300
   },
   "schema": {
+    "lets_encrypt": {
+      "accept_terms": "bool",
+      "certfile": "str",
+      "keyfile": "str"
+    },
     "accept_lets_encrypt_terms": "bool",
     "token": "str",
     "domains": ["str"],
