--- a/snips/Dockerfile
+++ b/snips/Dockerfile
@@ -1,6 +1,6 @@
 ARG BUILD_FROM
 ARG BUILD_VERSION
-FROM ${BUILD_FROM}-$BUILD_VERSION
+FROM ${BUILD_FROM}-${BUILD_VERSION}
 
 # Copy data
 COPY run.sh /
