--- a/rpc_shutdown/config.json
+++ b/rpc_shutdown/config.json
@@ -1,12 +1,13 @@
 {
   "name": "RPC Shutdown",
-  "version": "0.1",
+  "version": "0.2",
   "slug": "rpc_shutdown",
   "description": "Simple way for remote windows shutdowns",
   "url": "https://home-assistant.io/addons/rpc_shutdown/",
   "startup": "services",
   "boot": "auto",
   "stdin": true,
+  "host_network": true,
   "options": {
     "computers": [
       {
