--- a/configurator/config.json
+++ b/configurator/config.json
@@ -1,19 +1,18 @@
 {
   "name": "Configurator",
-  "version": "0.2.0-p1",
+  "version": "0.2.0-p2",
   "slug": "configurator",
   "description": "Browser-based configuration file editor for Home Assistant.",
   "url": "https://home-assistant.io/addons/configurator",
   "startup": "application",
   "webui": "[PROTO:ssl]://[HOST]:[PORT:3218]",
+  "homeassistant_api": true,
   "boot": "auto",
   "ports": {
     "3218/tcp": 3218
   },
   "map": ["config:rw", "ssl"],
   "options": {
-    "homeassistant_api": "http://homeassistant:8123/api",
-    "homeassistant_password": "",
     "username": "admin",
     "password": null,
     "certfile": "fullchain.pem",
@@ -24,8 +23,6 @@
     "ignore_pattern": ["__pycache__"]
   },
   "schema": {
-    "homeassistant_api": "url",
-    "homeassistant_password": "str",
     "username": "str",
     "password": "match(.+)",
     "certfile": "str",
