--- a/cec_scan/Dockerfile
+++ b/cec_scan/Dockerfile
@@ -23,8 +23,8 @@ RUN apk del libcec \
     && mkdir -p /usr/src/libcec/build \
     && cd /usr/src/libcec/build \
     && if [ "$BUILD_ARCH" != "armhf" ]; then \
-        cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr \
-        else; cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr \
+            cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr \
+        else cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr \
             -DRPI_INCLUDE_DIR=/opt/vc/include \
             -DRPI_LIB_DIR=/opt/vc/lib; fi \
     && make \
